Fix dark mode issue of helpful Search and search results in light mode

--- a/css/themes.css
+++ b/css/themes.css
@@ -1,17 +1,3 @@
-body:not(.dark) #helpfulSearch,
-body:not(.dark) .ui-autocomplete {
-    background-color: #fff !important;
-    color: #000 !important;
-}
-
-body:not(.dark) .ui-autocomplete li:hover {
-    background-color: #ddd !important;
-}
-
-body:not(.dark) #helpfulSearchDiv {
-    background-color: #f9f9f9 !important;
-}
-
 /* Dark Mode */
 
 .dark .blue {
